[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gasdiff"
version = "0.1.0"
description = "Generate Markdown gas diffs from Forge JSON gas reports"
authors = [{ name="Guilherme Dantas" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://github.com/guidanoli/gasdiff"
Issues = "https://github.com/guidanoli/gasdiff/issues"

[project.scripts]
gasdiff = "gasdiff.cli:cli"
